# bookstore

./: Dockerfile  Makefile  conftest.py  db.sqlite3  docker-compose.yml  pyproject.toml  t Method GET
bookstore/: settings.py  urls.py  views.py
order/: factories.py  urls.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializer.py
order/tests/test_serializers/: test_order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: __init__.py  order_viewset.py
product/: admin.py  factories.py
product/migrations/: 0001_initial.py
product/models/: category.py  product.py
product/serializers/: product_serializer.py
product/tests/test_serializers/: test_category_serializer.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: product_viewset.py
