[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Bookstore API"
authors = ["Hibernon <hibernon73@gmail.com>"]
readme = "README.md"
packages = [{include = "bookstore"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.5"
factory-boy = "^3.3.3"
django = "^5.1.7"
djangorestframework = "^3.15.2"
django-extensions = "^3.2.3"
django-debug-toolbar = "^5.1.0"
psycopg2-binary = "^2.9.10"
flake8 = "^7.2.0"
whitenoise = "^6.9.0"
gunicorn = "^23.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"